fix: moure estils de text-align i line-height al fitxer CSS i altres configuracions importants

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -282,6 +282,7 @@ section h2 {
     font-weight: bold; 
     border-bottom: 1px solid transparent;
 }
+
 .btn-link:hover { border-bottom: 1px solid var(--primary-color); }
 
 .btn {
@@ -296,6 +297,7 @@ section h2 {
     border: none; 
     font-size: 14px;
 }
+
 .btn:hover { background: #000060; }
 
 .info-block { margin-bottom: 30px; }
@@ -335,7 +337,12 @@ nav a, .card-info h1, section h2, h3 {
     line-height: 1.6;
 }
 
-/* MEDIA PER PC */
+#perfil p {
+    line-height: 30px;
+    text-align: justify;
+}
+
+/* MEDIA PER ESCRIPTORI */ 
 @media (min-width: 768px) {
     nav { 
         justify-content: flex-end; 
@@ -379,7 +386,7 @@ nav a, .card-info h1, section h2, h3 {
     }
 }
 
-/* MEDIA PER IMPRESIÓ */
+/* MEDIA PER IMPRESSIÓ */
 @media print {
     nav { display: none; }
     
@@ -395,12 +402,12 @@ nav a, .card-info h1, section h2, h3 {
     }
 
     body, h1, h2, h3, p, a { 
-        color: #000; 
+        color: #000 !important;
     }
 
     .timeline-content, .project-card {
         box-shadow: none;
-        background-color: #fff; 
+        background-color: #fff !important;
         border: 1px solid #ccc;
     }
 
